Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1942

Kerberos fails to log in on hostnames with capital characters

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.3.0
    • 1.3.2, 1.5.0, 1.4.1
    • security
    • None

    Description

      I tried setting up Kerberos on my laptop which has the hostname 'todd-Thinkpad-T540p' (including capital letters). It seems like we are inconsistent about our treatment of caps – if I make the keytab with the principal kudu/todd-thinkpad-t540p it fails complaining it can't find kudu/todd-Thinkpad-T540p, and if I make the keytab as the latter, it fails complaining it can't find the former.

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              tlipcon Todd Lipcon
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: